--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -4,6 +4,16 @@
 	xmlns:mvc="sap.ui.core.mvc"
 >
 	<Page>
+		<headerContent>
+			<Button 
+			icon="https://image.flaticon.com/icons/png/512/197/197374.png"
+			press=".setGermani18n"
+			class="sapUiSmallMarginBeginEnd"/>
+			<Button
+			icon="https://image.flaticon.com/icons/png/512/197/197571.png"
+			press=".setEnglishi18n"
+			class="sapUiTinyMarginEnd"/>
+		</headerContent>
 		<content>
 			<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.LogReg"/>
 		</content>
