--- a/webapp/view/ReviewTeamMember.view.xml
+++ b/webapp/view/ReviewTeamMember.view.xml
@@ -8,6 +8,16 @@
 		showNavButton="true"
 		navButtonPress=".onNavBack"
 	>
+	<headerContent>
+		<Button 
+		icon="https://image.flaticon.com/icons/png/512/197/197374.png"
+		press=".setGermani18n"
+		class="sapUiSmallMarginBeginEnd"/>
+		<Button
+		icon="https://image.flaticon.com/icons/png/512/197/197571.png"
+		press=".setEnglishi18n"
+		class="sapUiTinyMarginEnd"/>
+	</headerContent>	
 		<Panel height="230px">
 			<content>
 				<VBox
@@ -43,7 +53,7 @@
 								frameType="TwoByHalf"
 								headerImage="sap-icon://group"
 							/>
-							<Label text="Give a grade"/>
+							<Label text="{i18n>giveGrade}"/>
 							<RatingIndicator
 								id="RatingTeamMember"
 								iconSize="32px"
@@ -78,7 +88,7 @@
 			id="ReviewTextArea"
 			value="{Description}"
 			class="sapUiMediumMarginBeginEnd sapUiSmallMarginTop"
-			placeholder="Enter feedback description"
+			placeholder="{i18n>descriptionTextArea}"
 			growing="true"
 			growingMaxLines="7"
 			width="95%"
@@ -89,7 +99,7 @@
 				<contentRight>
 					<CheckBox
 						id="completedCheckBox"
-						text="is Completed?"
+						text="{i18n>isCompleted}?"
 						selected="{= ${Status} === '2' ? true : false}"
 						select="onToggleStatus"
 					/>
