--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -4,25 +4,32 @@
 	xmlns:mvc="sap.ui.core.mvc"
 >
 	<Page title="{i18n>mainPageTitle}">
-		<headerContent>
-			<Button 
-			text="{i18n>profileBtn}"
-			icon="sap-icon://account"
-			press=".onProfile"/>
-			<Button 
-			icon="https://image.flaticon.com/icons/png/512/197/197374.png"
-			press=".setGermani18n"
-			class="sapUiSmallMarginBeginEnd"/>
-			<Button
-			icon="https://image.flaticon.com/icons/png/512/197/197571.png"
-			press=".setEnglishi18n"
-			class="sapUiTinyMarginEnd"/>
-			<Button 
-			tooltip="{i18n>logOut}"
-			type="Emphasized"
-			icon="sap-icon://visits"
-			press=".onLogOut"/>
-		</headerContent>
+		<customHeader>
+           	<Bar>
+                <contentRight>
+					<Button 
+					icon="https://image.flaticon.com/icons/png/512/197/197374.png"
+					press=".setGermani18n"
+					class="sapUiSmallMarginBeginEnd"/>
+					<Button
+					icon="https://image.flaticon.com/icons/png/512/197/197571.png"
+					press=".setEnglishi18n"
+					class="sapUiTinyMarginEnd"/>
+					<Button 
+					text="{i18n>profileBtn}"
+					icon="sap-icon://account"
+					press=".onProfile"/>
+					<Button 
+					tooltip="{i18n>logOut}"
+					type="Emphasized"
+					icon="sap-icon://visits"
+					press=".onLogOut"/>
+                </contentRight>
+				<contentLeft>
+					<Image src="../resources/MHP_Logo_RGB.svg" height="75%"/>
+				</contentLeft>
+           	</Bar>
+     	</customHeader>
 		<FlexBox
 				fitContainer="true"
 				alignItems="Center"
