--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -4,16 +4,24 @@
 	xmlns:mvc="sap.ui.core.mvc"
 >
 	<Page>
-		<headerContent>
-			<Button 
-			icon="https://image.flaticon.com/icons/png/512/197/197374.png"
-			press=".setGermani18n"
-			class="sapUiSmallMarginBeginEnd"/>
-			<Button
-			icon="https://image.flaticon.com/icons/png/512/197/197571.png"
-			press=".setEnglishi18n"
-			class="sapUiTinyMarginEnd"/>
-		</headerContent>
+		<customHeader>
+           <Bar>
+                <contentRight>
+                     <Button 
+						icon="https://image.flaticon.com/icons/png/512/197/197374.png"
+						press=".setGermani18n"
+						class="sapUiSmallMarginBeginEnd"/>
+						<Button
+						icon="https://image.flaticon.com/icons/png/512/197/197571.png"
+						press=".setEnglishi18n"
+						class="sapUiTinyMarginEnd"/>
+                </contentRight>
+				<contentLeft>
+					<Image src="../resources/MHP_Logo_RGB.svg" height="75%"/>
+				</contentLeft>
+           </Bar>
+      </customHeader>
+		
 		<content>
 			<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.LogReg"/>
 		</content>
