--- a/webapp/view/RequestPEG.view.xml
+++ b/webapp/view/RequestPEG.view.xml
@@ -6,21 +6,19 @@
 >
 	<Page
 		class="sapUiContentPadding"
-		title="{i18n>requestPEGPage}"
-		showNavButton="true"
-		navButtonPress=".onNavBack"
 		enableScrolling="false"
 	>
-	<headerContent>
-		<Button 
-		icon="https://image.flaticon.com/icons/png/512/197/197374.png"
-		press=".setGermani18n"
-		class="sapUiSmallMarginBeginEnd"/>
-		<Button
-		icon="https://image.flaticon.com/icons/png/512/197/197571.png"
-		press=".setEnglishi18n"
-		class="sapUiTinyMarginEnd"/>
-	</headerContent>	
+		<customHeader>
+           <Bar>
+				<contentLeft>
+					<Button
+						icon="sap-icon://nav-back"
+						press=".navBack"
+						class="sapUiSmallMarginEnd"/>
+					<Image src="../resources/MHP_Logo_RGB.svg" height="75%" press=".toMain"/>
+				</contentLeft>
+           </Bar>
+      	</customHeader>
 		<content>
 			<VBox width="100%">
 				<VBox id="mainInfoContainer">
