--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -3,7 +3,8 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 >
-	<Page enableScrolling="false">
+	<Page enableScrolling="false"
+		class="backgroundGradient">
 		<customHeader>
            <Bar>
                 <contentRight>
