--- a/webapp/view/Register.view.xml
+++ b/webapp/view/Register.view.xml
@@ -1,11 +1,11 @@
 <mvc:View
-	controllerName="sap.ui.demo.walkthrough.controller.Register"
-	xmlns:core="sap.ui.core"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:f="sap.ui.layout.form"
+	controllerName="sap.ui.demo.walkthrough.controller.LogReg"
 	xmlns="sap.m"
->
-	<Page>
+	xmlns:mvc="sap.ui.core.mvc"
+		xmlns:core="sap.ui.core">
+
+	<Page 
+		class="backgroundGradient">
 		<customHeader>
            <Bar>
 				<contentLeft>
@@ -13,38 +13,28 @@
 						icon="sap-icon://nav-back"
 						press=".navBack"
 						class="sapUiSmallMarginEnd"/>
-					<Image src="../resources/MHP_Logo_RGB.svg" height="75%"/>
+					<Image src="../resources/MHP_Logo_RGB.svg" height="75%" />
 				</contentLeft>
            </Bar>
-      	</customHeader>
+      </customHeader>
+	<FlexBox
+			width="1200px"
+			alignItems="Center"
+			justifyContent="Center">
+		
+		<Image src="../resources/MHP_login.png" height="280px" class="imgShadow"/>
 
 		<FlexBox
-                height="650px"
-                alignItems="Center"
-                justifyContent="Center">
+				height="650px"
+				alignItems="Center"
+				justifyContent="Center">
 
-		 <VBox fitContainer="true">
-            <layoutData>
-                <FlexItemData growFactor="7" />
-            </layoutData>
-		
-		<f:SimpleForm
-				id="form"
-				editable="true"
-				layout="ResponsiveGridLayout"
-				labelSpanXL="3"
-				labelSpanL="3"
-				labelSpanM="3"
-				adjustLabelSpan="false"
-				emptySpanXL="3"
-				emptySpanL="3"
-				emptySpanM="3"
-				columnsXL="1"
-				columnsL="1"
-				singleContainerFullSize="false"
-			>
-			<f:content>
-				<Label
+			<VBox fitContainer="true">
+			<layoutData>
+				<FlexItemData growFactor="7" />
+			</layoutData>
+			
+			<Label
 						text="{i18n>userText}"
 						labelFor="UsernameRegisterField"
 						required = "true"
@@ -53,7 +43,7 @@
 					id="UsernameRegisterField"
 					placeholder="{i18n>enterUsername}"
 					valueLiveUpdate="true"
-					width="80%"
+					width="450px"
 					value="{ path: '/username',type: '.customUserType'}"
 				/>
 				<Label
@@ -66,7 +56,7 @@
 					type="Password"
 					placeholder="{i18n>enterPassword}"
 					valueLiveUpdate="true"
-					width="80%"
+					width="450px"
 					value="{ path: '/password',type: '.customPasswordType'}"
 				/>
 				<Label
@@ -78,26 +68,27 @@
 					id="EmailRegisterField"
 					placeholder="{i18n>enterMail}"
 					valueLiveUpdate="true"
-					width="80%"
+					width="450px"
 					value="{ path: '/email',type: '.customEMailType'}"
 				/>
-					</f:content>
-			</f:SimpleForm>
 
-		<FlexBox
-        alignItems="Center"
-        justifyContent="Center">
-      <items>
-				<Button
+			<HBox fitContainer="true" alignItems="Stretch">
+				<layoutData>
+					<FlexItemData growFactor="4" />
+				</layoutData>
+				<VBox alignItems="Center" width="450px">
+					<Button
 					text="{i18n>submitRegisterBtn}"
 					class="myCustomButton"
-					width="500px"
+					width="400px"
 					type="Emphasized"
 					press=".onCreateRegister"
 				/>
-			  </items>
-    </FlexBox>
-			</VBox>
-	       </FlexBox>
-	</Page>
+				</VBox>
+			</HBox>
+		</VBox>
+		</FlexBox>
+
+	</FlexBox>	
+		</Page>
 </mvc:View>
